--- a/HAW_Tool/Themes/Generic.xaml
+++ b/HAW_Tool/Themes/Generic.xaml
@@ -3,11 +3,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:local="clr-namespace:HAW_Tool" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" xmlns:HAW_Tool_HAW="clr-namespace:HAW_Tool.HAW" xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-    xmlns:Native="clr-namespace:HAW_Tool.HAW.Native" xmlns:Depending="clr-namespace:HAW_Tool.HAW.Depending"
+    xmlns:Depending="clr-namespace:HAW_Tool.HAW.Depending"
     xmlns:UserControls="clr-namespace:HAW_Tool.UserControls">
 
     <sys:Double x:Key="RasterH">90</sys:Double>
-    <sys:Double x:Key="RasterV">100</sys:Double>
+    <sys:Double x:Key="RasterV">50</sys:Double>
     <SolidColorBrush x:Key="PR" Color="AliceBlue" />
 
     <Style x:Key="ScrollableItemsControl" TargetType="{x:Type ItemsControl}">
@@ -28,6 +28,7 @@
     <Depending:TimeToCoord x:Key="TimeToTop" Multiplier="{StaticResource RasterV}" />
     <Depending:TimeToThicknessConverter x:Key="TimeToLeftMargin" Multiplier="{StaticResource RasterH}" />
     <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
+    
     <Style x:Key="HAWGroupBoxStyle" TargetType="{x:Type GroupBox}">
         <Setter Property="BorderBrush" Value="#D5DFE5"/>
         <Setter Property="BorderThickness" Value="1"/>
