--- a/SeveQsCustomControls/Themes/Generic.xaml
+++ b/SeveQsCustomControls/Themes/Generic.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:SeveQsCustomControls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
@@ -92,7 +92,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:DeviceList}">
                     <Grid x:Name="LayoutRoot" d:DesignWidth="466" d:DesignHeight="389">
-                        <Label Margin="8,8,8,0" VerticalAlignment="Top" Content="GerÃ¤teliste" Background="#19FFFFFF" Foreground="White"/>
+                        <Label Margin="8,8,8,0" VerticalAlignment="Top" Content="GerÃƒÂ¤teliste" Background="#19FFFFFF" Foreground="White"/>
                         <Grid Margin="8,47,8,8" Background="#19FFFFFF">
                             <Border HorizontalAlignment="Stretch" Margin="8,8,8,38.183" Width="Auto" Background="#18FFFFFF" BorderThickness="2" CornerRadius="5" BorderBrush="#24FFFFFF" Padding="2">
                                 <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -105,10 +105,10 @@
                             <Button Command="{x:Static local:DeviceList.RemoveDeviceCommand}" Margin="42,0,0,4.183" VerticalAlignment="Bottom" Width="30" Height="30" HorizontalAlignment="Left" Style="{DynamicResource TitleBarButtonStyle}" d:LayoutOverrides="Width">
                                 <Image Width="16" Height="16" Source="/SeveQsCustomControls;Component/images/delete.png" Stretch="Fill"/>
                             </Button>
-                            <Button Command="{x:Static local:DeviceList.MountDeviceCommand}" Margin="76,0,78,4.183" VerticalAlignment="Bottom" Width="30" Height="30" Style="{DynamicResource TitleBarButtonStyle}" ToolTip="GerÃƒÂ¤t mounten">
+                            <Button Command="{x:Static local:DeviceList.MountDeviceCommand}" Margin="76,0,78,4.183" VerticalAlignment="Bottom" Width="30" Height="30" Style="{DynamicResource TitleBarButtonStyle}" ToolTip="GerÃƒÆ’Ã‚Â¤t mounten">
                                 <Image Width="16" Height="16" Source="/SeveQsCustomControls;Component/images/drive_go.png" Stretch="Fill"/>
                             </Button>
-                            <Button Command="{x:Static local:DeviceList.UnmountDeviceCommand}" Margin="0,0,44,4.183" VerticalAlignment="Bottom" Width="30" Height="30" HorizontalAlignment="Right" Style="{DynamicResource TitleBarButtonStyle}" ToolTip="GerÃƒÂ¤t unmounten" d:LayoutOverrides="Width">
+                            <Button Command="{x:Static local:DeviceList.UnmountDeviceCommand}" Margin="0,0,44,4.183" VerticalAlignment="Bottom" Width="30" Height="30" HorizontalAlignment="Right" Style="{DynamicResource TitleBarButtonStyle}" ToolTip="GerÃƒÆ’Ã‚Â¤t unmounten" d:LayoutOverrides="Width">
                                 <Image Width="16" Height="16" Source="/SeveQsCustomControls;Component/images/drive_delete.png" Stretch="Fill"/>
                             </Button>
                             <Button Command="{x:Static local:DeviceList.LoadTCFavsCommand}" Margin="76,0,0,4.183" VerticalAlignment="Bottom" Width="30" Height="30" Style="{DynamicResource TitleBarButtonStyle}" ToolTip="Favoriten aus TC laden" HorizontalAlignment="Left" d:LayoutOverrides="Width">
@@ -217,22 +217,32 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type local:RasteredItemsControl}">
-        <Setter Property="ItemContainerStyle">
+    <Style x:Key="RasteredItemContainerStyle" TargetType="{x:Type ListBoxItem}">
+        <Setter Property="Grid.Row">
             <Setter.Value>
-                <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="IsSelected" Value="{Binding Path='IsSelected', Mode=TwoWay}" />
-                </Style>
+<!--                 <Binding Path="(local:RasteredItemExtension.Row)" /> -->
+                <Binding Path="Row" />
             </Setter.Value>
         </Setter>
+        <Setter Property="IsSelected" Value="{Binding Path='IsSelected', Mode=TwoWay}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <ContentPresenter ContentSource="Content" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style TargetType="{x:Type local:RasteredItemsControl}">
+        <Setter Property="ItemContainerStyle" Value="{StaticResource RasteredItemContainerStyle}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:RasteredItemsControl}">
                     <ScrollViewer>
                         <Grid>
-                            <Label HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5,5,0,0" 
-                               FontSize="{TemplateBinding FontSize}" 
-                               FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" Content="{TemplateBinding Header}" />
+                            <Label x:Name="Header" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,18,0,0" 
+                               FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" Content="{Binding Path='Header', FallbackValue='Header', RelativeSource={RelativeSource Mode=TemplatedParent}}" FontSize="16" MinWidth="100" />
                             <Canvas x:Name="PART_RasterCanvas" />
                             <ItemsPresenter/>
                         </Grid>
